gcp-tokyo/ns-default/90-gateway.yaml
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: external-https
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: lynlab-co-kr
    protocol: HTTPS
    hostname: '*.lynlab.co.kr'
    port: 443
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      options:
        networking.gke.io/pre-shared-certs: lynlab-co-kr-cloudflare-origin
  - name: mollulog-net
    protocol: HTTPS
    hostname: '*.mollulog.net'
    port: 443
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      options:
        networking.gke.io/pre-shared-certs: mollulog-net-cloudflare-origin
